.provarCaches/00D5f000005vwGkEAI/objects/rstk__shopcal__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_shopcal</customHelpPage>
    <description>shopcal__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__shopcal_div__r.rstk__sydiv_div__c + &apos;_&apos; +  TEXT(rstk__shopcal_startyear__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shopcal_data__c</fullName>
        <inlineHelpText>This is the compressed data for the Shop Calendar</inlineHelpText>
        <label>data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__shopcal_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with this Shop Calendar</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divshopcals</relationshipLabel>
        <relationshipName>divshopcals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__shopcal_lastyear__c</fullName>
        <inlineHelpText>This is the last year in this Shop Calendar</inlineHelpText>
        <label>Last Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shopcal_startyear__c</fullName>
        <inlineHelpText>This is the first, starting year for the Shop Calendar</inlineHelpText>
        <label>Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shop Calendar</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shop Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>